--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,13 +20,16 @@ services:
       - db
 
   db:
-    image: mysql:5.7
+    build: 
+        context: ./mysql
+        dockerfile: Dockerfile
+    #image: mysql:5.7
     command: --innodb-use-native-aio=0
     container_name: db
     restart: always
     tty: true
     volumes:
-      - ./mysql:/var/lib/mysql
+      - ./mysql/volume:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - MYSQL_DATABASE=nodedb
